<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="MY_TEST_DEVICE">0176BD092B2BDC31EBDFBF2F0211006B</string>
    <string name="app_name">Slab on ground</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- dim -->
    <dimen name="rpad">10dip</dimen>
    <dimen name="width_textview">150dip</dimen>
    <dimen name="width_edittext">90dip</dimen>
    <dimen name="width_screen">400dip</dimen>




    <!-- input strings -->
    <string name="hf_str">Slab thickness</string>
    <string name="ks_str">Subgrade reaction</string>
    <string name="reo_loc_str">Reinforcement location</string>
    <string name="Pu_str">Ultimate load</string>
    <string name="radius_str">Equivalent radius of loaded area</string>
    <string name="load_cond_str">Loading condition</string>
    <string name="wheel_spacing_str">Load spacing (for dual point loads)</string>
    <string name="preferences_title_str">Settings</string>
    <string name="DB_str">Bar diameter</string>
    <string name="DB_spacing_str">Bar spacing</string>

    <string name="topbarstr1">Top (Temperature bars only)</string>
    <string name="topbarstr2">Top and bottom</string>

    <string name="About_str">About</string>


    <!-- PREF strings -->
    <string name="UNIT">UNIT</string>
    <string name="SI">SI</string>
    <string name="Imperial">Imperial</string>
    <string name="BARLIST">BARLIST</string>
    <string name="barlist_SI">10 12 16 20 25 28 30 32 36</string>
    <string name="barlist_Imperial">4 5 6 7 8 9 10 11 14</string>
    <string name="COVER">COVER</string>
    <string name="FC">FC</string>
    <string name="FYMAIN">FYMAIN</string>
    <string name="fymain_str">Tension bar yield stress</string>
    <string name="PHI_C">PHI_C</string>
    <string name="phi_c_str">Concrete resistance factor</string>
    <string name="PHI_S">PHI_S</string>
    <string name="PHI_S_str">Reinforcement resistance factor</string>
    <string name="BARLIST_RESET">BARLIST_RESET</string>
    <string name="UNIT_CHANGED">false</string>

    <!-- PREF STRINGS FROM UI INPUT -->
    <string name="MIN_TENSION_BAR_DIA_ITEM_SELECTION">MIN_TENSION_BAR_DIA_ITEM_SELECTION</string>
    <string name="REOLOC_ITEM_SELECTION">REOLOC_ITEM_SELECTION</string>
    <string name="SLAB_THICKNESS">SLAB_THICKNESS</string>
    <string name="SUBGRADE">SUBGRADE</string>
    <string name="POINT_LOAD">POINT_LOAD</string>
    <string name="EQUIV_RADIUS">EQUIV_RADIUS</string>
    <string name="WHEEL_SPACING">WHEEL_SPACING</string>
    <string name="BAR_SPACING">BAR_SPACING</string>


    <array
        name="units_array_entries">
        <item>@string/SI</item>
        <item>@string/Imperial</item>
    </array>


    <string-array name="reo_loc_entries">
        <item>@string/topbarstr1</item>
        <item>@string/topbarstr2</item>
    </string-array>

    <integer name="google_play_services_version">4323000</integer>

</resources>
